ver 0.16.8 (2012/??/??)
* fix for libsamplerate assertion failure
* decoder:
  - vorbis (and others): fix seeking at startup
  - ffmpeg: read the "year" tag
* fix endless loop in text file reader


ver 0.16.7 (2012/02/04)
* input:
  - ffmpeg: support libavformat 0.7
* decoder:
  - ffmpeg: support libavformat 0.8, libavcodec 0.9
  - ffmpeg: support all MPD tags
* output:
  - httpd: fix excessive buffering
  - openal: force 16 bit playback, as 8 bit doesn't work
  - osx: remove sleep call from render callback
  - osx: clear render buffer when there's not enough data
* fix moving after current song


ver 0.16.6 (2011/12/01)
* decoder:
  - fix assertion failure when resuming streams
  - ffmpeg: work around bogus channel count
* encoder:
  - flac, null, wave: fix buffer corruption bug
  - wave: support packed 24 bit samples
* mapper: fix the bogus "not a directory" error message
* mapper: check "x" and "r" permissions on music directory
* log: print reason for failure
* event_pipe: fix WIN32 regression
* define WINVER in ./configure
* WIN32: autodetect filesystem encoding


ver 0.16.5 (2011/10/09)
* configure.ac
  - disable assertions in the non-debugging build
  - show solaris plugin result correctly
  - add option --enable-solaris-output
* pcm_format: fix 32-to-24 bit conversion (the "silence" bug)
* input:
  - rewind: reduce heap usage
* decoder:
  - ffmpeg: higher precision timestamps
  - ffmpeg: don't require key frame for seeking
  - fix CUE track seeking
* output:
  - openal: auto-fallback to mono if channel count is unsupported
* player:
  - make seeking to CUE track more reliable
  - the "seek" command works when MPD is stopped
  - restore song position from state file (bug fix)
  - fix crash that sometimes occurred when audio device fails on startup
  - fix absolute path support in playlists
* WIN32: close sockets properly
* install systemd service file if systemd is available


ver 0.16.4 (2011/09/01)
* don't abort configure when avahi is not found